--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
  예를 들면 5개의 숫자 2 4 5 8 12가 주어지고, 3개를 뽑은 조합의 합이 6의 배수인 조합을 찾으면 4+8+12 2+4+12로 2가지가 있습니다. ▣ 입력설명
  첫줄에 정수의 개수 N(…</p></div></a><a class="thumbnail observed" href="/algorithm/20200318-알고리즘/"><div><h3>20200318 알고리즘</h3><p>1. 중복순열 구하기 1부터 N까지 번호가 적힌 구슬이 있습니다. 이 중 중복을 허락하여 M번을 뽑아 일렬로 나열 하는 방법을 모두 출력합니다. ▣ 입력설명
  첫 번째 줄에 자연수 N(3<=N<=10)과 M(3<=M<=N) 이 주어집니다. ▣ 출력설명
- 첫 번째 줄에 결과를 출력합니다. 맨 마지막 총 경우의 수를 출력합니다. 출력순서는 사전순으로 오름차순…</p></div></a><a class="thumbnail observed" href="/algorithm/20200317-알고리즘/"><div><h3>20200317 알고리즘</h3><p>1. 중복순열 구하기 1부터 N까지 번호가 적힌 구슬이 있습니다. 이 중 중복을 허락하여 M번을 뽑아 일렬로 나열 하는 방법을 모두 출력합니다. ▣ 입력설명
- 첫 번째 줄에 자연수 N(3<=N<=10)과 M(3<=M<=N) 이 주어집니다. ▣ 출력설명
- 첫 번째 줄에 결과를 출력합니다. 맨 마지막 총 경우의 수를 출력합니다. 출력순서는 사전순으로 오름차순…</p></div></a></div><footer class="footer">©<a href="https://github.com/JaeYeopHan">Jbee</a>, Built with<!-- --> <a href="https://github.com/JaeYeopHan/gatsby-starter-bee">Gatsby-starter-bee</a></footer></div></div></div><script>
+ 첫 번째 줄에 결과를 출력합니다. 맨 마지막 총 경우의 수를 출력합니다. 출력순서는 사전순으로 오름차순…</p></div></a><a class="thumbnail observed" href="/algorithm/20200316-알고리즘/"><div><h3>20200316 알고리즘</h3><p>1. 이진트리 순회 아래 그림과 같은 이진트리를 전위순회와 후위순회를 연습해보세요. image 전위순회 출력 : 1 2 4 5 3 6 7  중위순회 출력 : 4 2 5 1 6 3 7  후위순회 출력 : 4 5 2 6 7 3 1 Solution 함수가 스택에 쌓이고 빠지는 과정을 잘 생각 해보자! 2. 부분집합 구하기 자연수 N이 주어지면 1부터 N까지의 …</p></div></a></div><footer class="footer">©<a href="https://github.com/JaeYeopHan">Jbee</a>, Built with<!-- --> <a href="https://github.com/JaeYeopHan/gatsby-starter-bee">Gatsby-starter-bee</a></footer></div></div></div><script>
   
   
   if(true) {
